--- a/index.html
+++ b/index.html
@@ -1,36 +1,65 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+    <head>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
-<div> 
-    <h1> HTML, CSS & Javascript</h1>
-</div>
+</head>
+<body>
 
-<div>
-<img src="mars-mobile.jpg" alt="Futuristic drawing of a couple in a mars base."/>
-</div>
+<div class="main-container">
 
-<div>
-<ul>
-    <li>HTML</li>
-    <li>CSS</li>
-    <li>Javascript</li>
-</ul>
-</div>
-<video>
-    <source src="https://www.youtube.com/watch?v=sB_nEtZxPog">
-    Your browser does not support the video tag.
-</video>
+    <header>
+        <h1> HTML, CSS & Javascript</h1>
+        <i class="bi bi-rocket-takeoff-fill"></i>
+    </header> 
+
+    <div class="image-section">
+        <img src="mars-mobile.jpg" alt="Futuristic drawing of a couple in a mars base."/>
+    </div>
+
+    <div class="unordered-list">
+        <ul>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>Javascript</li>
+        </ul>
+    </div>
+
+    <div class ="video-section">
+        <h2>Transportfordon</h2>
+        <iframe 
+            src="https://www.youtube.com/embed/uxM_L7ZCLjc?si=MJ32v_UleXK4fygz"
+            width="100%"
+            height="315"
+            frameborder="0">
+        </iframe>
+    </div>
 
 <div>
     <form>
         <label for="nameField">Namn på resenär:</label>
-        <input type="text" id="nameField" name="nameField">
+        <input type="text" id="nameField" name="name">
+
         <label for="dobField">Födelsedatum:</label>
-        <input type="date" id="dobField" name="dobField">
+        <input type="date" id="dobField" name="dob">
+
         <label for="destinationField">Destination:</label>
-        <input type="checkbox" id="destinationField" name="destinationField">
+        <select id="destinationField" name="destination">
+                <option value="moon" selected>Månen</option>
+                </select>
+
         <label for="returnBox">Återresa?</label>
-        <input type="button" id="returnBox" name="returnBox">
+        <input type="button" id="returnBox" name="returnTrip">
+
+        <button type="submit">Res</button>
+
+        <p>
+            <i class="bi bi-envelope-fill"></i>
+            <a href="mailto:example@example.com">Kontakta oss</a>
+        </p>
     </form>
 </div>
+
+</div>
+</body>
 </html>
