button width added

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
         <label for="returnBox">Återresa?</label>
         <input type="button" id="returnBox" name="returnTrip">
 
-        <button type="submit">Res</button>
+        <button type="submit" width="100%">Res</button>
 
         <p>
             <i class="bi bi-envelope-fill"></i>
