--- a/index.html
+++ b/index.html
@@ -28,10 +28,14 @@
     <div class ="video-section">
         <h2>Transportfordon</h2>
         <iframe 
-            src="https://www.youtube.com/embed/uxM_L7ZCLjc?si=MJ32v_UleXK4fygz"
-            width="100%"
-            height="315"
-            frameborder="0">
+            width="560" 
+            height="315" 
+            src="https://www.youtube.com/embed/uxM_L7ZCLjc?si=_knziBaHgfY8pBRM" 
+            title="YouTube video player" 
+            frameborder="0" 
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+            referrerpolicy="strict-origin-when-cross-origin" 
+            allowfullscreen>
         </iframe>
     </div>
 
