--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 </select>
 
         <label for="returnBox">Återresa?</label>
-        <input type="button" id="returnBox" name="returnTrip">
+        <input type="checkbox" id="returnBox" name="returnTrip">
 
         <button type="submit">Res</button>
 
