--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
-    <head>
+<html lang="sv" dir="ltr">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="stylesheet.css">
-</head>
+  </head>
 <body>
 
 <div class="main-container">
@@ -25,17 +27,19 @@
         </ul>
     </div>
 
-    <div class ="video-section">
+   <div class="video-section">
         <h2>Transportfordon</h2>
-        <iframe 
-            height="100%"
-            src="https://www.youtube.com/embed/sB_nEtZxPog?si=c2gQfZDj8BRzUSem"
-            frameborder="0";
-            title="YouTube video player" 
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-            allowfullscreen>
-        </iframe>
+                <div class="video-container">
+                    <iframe 
+                        src="https://www.youtube.com/embed/sB_nEtZxPog?si=c2gQfZDj8BRzUSem"
+                        title="YouTube video player"
+                        frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        allowfullscreen>
+                    </iframe>
+         </div>
     </div>
+
 
 <div>
     <form>
